# lambdabot-reminder-plugins

./: lambdabot-reminder-plugins.cabal
src/Lambdabot/Plugin/: Reminder.hs
