name:                lambdabot-reminder-plugins
version:             0.1.0.0
synopsis:            A reminders plugin for lambdabot
license:             BSD3
author:              Richard Wallace
maintainer:          rwallace@thewallacepack.net
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Lambdabot.Plugin.Reminder

  build-depends:       base >=4.7 && <5
                     , attoparsec >= 0.12
                     , bytestring >= 0.10
                     , cron >= 0.2
                     , lambdabot-core >=5.0
                     , lifted-base >= 0.2
                     , mtl >= 2.0
                     , stm >= 2.0
                     , text >= 0.11
                     , time >= 1.4
                     , transformers >= 0.3.0

  hs-source-dirs:      src

  default-language:    Haskell2010
